posiGen_FullsendBox/src/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>Federal_Grant_ITC_Status__c</fullName>
        <inlineHelpText>ITC = Income Tax Credit</inlineHelpText>
        <label>Federal Grant/ITC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Grant/ITC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded by ITC Investor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_3rd_Party_Inspection_Compete_DateX__c</fullName>
        <formula>Opportunity__r.Final_3rd_Party_Inspection_Compete_Date__c</formula>
        <label>Final 3rd Party Inspection Compete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_3rd_Party_Inspection_Compete_Date__c</fullName>
        <description>Used for Apex trigger.</description>
        <label>Final 3rd Party Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Inspection_Notification_Received__c</fullName>
        <label>Final Inspection Notification Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Option_Code__c</fullName>
        <formula>IF( ISPICKVAL( Finance_Type__c , &quot;No Initial Payment&quot;) , &quot;NI&quot;, &quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Option Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Type__c</fullName>
        <label>Finance Type</label>
        <picklist>
            <picklistValues>
                <fullName>No Initial Payment</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Bill_Payment_Options__c</fullName>
        <label>Financing Bill Payment Options</label>
        <picklist>
            <picklistValues>
                <fullName>Checking / Savings Acct (Auto-pay)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Pay (One-time $15 fee)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postal Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing_Term_in_Months__c</fullName>
        <formula>Lease_System_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financing Term in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financing_is_Checking_or_Savings__c</fullName>
        <formula>ISPICKVAL( Financing_Bill_Payment_Options__c , &apos;Checking / Savings Acct (Auto-pay)&apos;)</formula>
        <label>Financing is Checking or Savings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_is_Credit_Card__c</fullName>
        <formula>ISPICKVAL( Financing_Bill_Payment_Options__c, &apos;Credit Card Payments&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financing is Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_is_Online_Pay__c</fullName>
        <formula>ISPICKVAL( Financing_Bill_Payment_Options__c, &apos;Online Pay (One-time $15 fee)&apos; )</formula>
        <label>Financing is Online Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_is_Postal_Mail__c</fullName>
        <formula>ISPICKVAL( Financing_Bill_Payment_Options__c, &apos;Postal Mail&apos; )</formula>
        <label>Financing is Postal Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Closing_Call_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Closing Call Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Intro_Call_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Intro Call Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date_60_after_EU_NM__c</fullName>
        <formula>IF( ISNULL(PVI_Net_Meter_Install_Date__c)  || ISNULL(EU_Completed_Date__c), Null, IF(EU_Completed_Date__c &gt; PVI_Net_Meter_Install_Date__c, EU_Completed_Date__c, PVI_Net_Meter_Install_Date__c) + 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Payment Date (60 after EU/NM)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <inlineHelpText>Calculated based on Customer Zip Code and Net Meter Install Date</inlineHelpText>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Dat__c</fullName>
        <formula>IF( ISNULL( First_Payment_Due_Date_Override__c ) ,  First_Payment_Due_Date_Default__c , First_Payment_Due_Date_Override__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Date_Default__c</fullName>
        <formula>DATE( YEAR(Booking_Date__c ) , MONTH(Booking_Date__c ) + 2 ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Payment Due Date Default</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Date_Override__c</fullName>
        <label>First Payment Due Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <picklist>
            <picklistValues>
                <fullName>Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fuel_Oil_Acct_Password__c</fullName>
        <label>Fuel Oil Acct Password</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Fuel_Oil_Acct_Username__c</fullName>
        <label>Fuel Oil Acct Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Oil_Utility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fuel Oil Utility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Utility_Type__c</field>
                <operation>equals</operation>
                <value>Fuel Oil</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Fuel Oil Utility)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fuel_Oil__c</fullName>
        <label>Fuel Oil Acct Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address_from_UA__c</fullName>
        <formula>Elec_Acct_Street_1__c + &apos;, &apos; +IF(ISBLANK(Elec_Acct_Street_2__c),&apos;&apos;, Elec_Acct_Street_2__c + &apos;, &apos;) + Elec_Acct_City__c + &apos; &apos; + Elec_Acct_State__c + &apos; &apos; + Elec_Acct_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Address from the Utility Account,</inlineHelpText>
        <label>Full Address from UA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_old_text_entry__c</fullName>
        <label>Old Text Entry Fund</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded_by_ITC_Investor__c</fullName>
        <inlineHelpText>Enter Date Federal Grant/ITC is funded by ITC Investor</inlineHelpText>
        <label>Funded by ITC Investor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funded_by_Iberia__c</fullName>
        <label>Funded by Iberia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funded_by_KWF__c</fullName>
        <label>Funded by KWF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funded_by_US_Bank__c</fullName>
        <label>Funded by US Bank</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Traunche__c</fullName>
        <formula>IF(ISBLANK( TEXT(Override_SPE_Funding_Traunche__c)), TEXT(SPE_Tax_Period__r.SPE__r.Funding_Traunche__c), TEXT(Override_SPE_Funding_Traunche__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Traunche</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GG_Number__c</fullName>
        <label>GG Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GreenSky_Expiration__c</fullName>
        <label>GreenSky Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GreenSky_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if funds from GreenSky has been transferred to PosiGen</inlineHelpText>
        <label>GreenSky Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_System_Cost_in_DollarsX__c</fullName>
        <formula>TEXT(Opportunity__r.Gross_System_Cost_in_Dollars__c)</formula>
        <label>Gross System Cost in Dollars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_System_Cost_in_Dollars__c</fullName>
        <description>From the Wegman tracker</description>
        <label>Gross System Cost in Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HDLC_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HDLC Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HDLC_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HDLC Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Been_Boarded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fills in when an LD Lease is added to the LD Lease object.</description>
        <label>Has Been Boarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_EE_as_a_Solar_Product__c</fullName>
        <formula>INCLUDES(Solar_Product__c  , &quot;Energy Efficiency&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has EE as a Solar Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_PV_As_a_Product__c</fullName>
        <formula>INCLUDES( Solar_Product__c , &apos;Solar Panels&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has PV As a Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Referral__c</fullName>
        <formula>Not( ISBLANK( Referral__c ) )</formula>
        <label>Has Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heating_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Heating Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Heating Provider)</relationshipLabel>
        <relationshipName>Opportunities_Provide_Heat1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Highest_Electric_Bill_in_Past_12_Months__c</fullName>
        <label>Highest Electric Bill in Past 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Heating_Method__c</fullName>
        <label>Home Heating Method</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hot_Water_Heater__c</fullName>
        <inlineHelpText>What type of hot water heater?</inlineHelpText>
        <label>Hot Water Heater</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hot_Water_Heating_Method__c</fullName>
        <label>Hot Water Heating Method</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tankless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>House_District__c</fullName>
        <label>House District</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Photo_Upload_Time__c</fullName>
        <label>House Photo Upload Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>House_Photo_Uploader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>House Photo Uploader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Photo1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISS_Appointment_Payout_Date__c</fullName>
        <description>For historic data - appointment kept</description>
        <label>ISS Appointment Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISS_Appointment_Payout__c</fullName>
        <description>For historic data - appointment kept</description>
        <label>ISS Appointment Payout</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISS_Approved_Payout_Date__c</fullName>
        <description>Date of payroll run.</description>
        <label>ISS Approved Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISS_Approved_Payout__c</fullName>
        <description>Payout amount for approval of sale.</description>
        <label>ISS Approved Payout</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISS_Bonus_Amount__c</fullName>
        <description>Field for any extra money bonuses Tom is offering (outside of normal commission structure)</description>
        <label>ISS Bonus Amount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ISS_Bonus_Paid_Date__c</fullName>
        <description>Date bonus commission is paid out.</description>
        <label>ISS Bonus Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISS_Charged_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For identifying an opp that is charged back.</description>
        <label>ISS Charged Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISS_Commission_Description__c</fullName>
        <description>For putting in any details or notes.</description>
        <label>ISS Commission Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISS_Commission_Tier__c</fullName>
        <description>Whatever qualified tier they originally hit</description>
        <label>ISS Commission Tier</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ITC_Funding_Amount__c</fullName>
        <label>ITC Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ITC_Funding_Recd_Date__c</fullName>
        <inlineHelpText>Enter Date Federal Grant/ITC is Received</inlineHelpText>
        <label>ITC Funding Recd Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Iberia_Amount__c</fullName>
        <label>Iberia Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Iberia_Submitted_Age__c</fullName>
        <formula>TODAY() -  Submitted_to_Iberia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Iberia Submitted Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Referral_Specify_Source__c</fullName>
        <label>If Referral, Specify Source</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_shading_details__c</fullName>
        <description>From lead</description>
        <label>If yes, shading details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Included_in_Commission_Run_ISS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Included in Commission Run ISS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Included_in_Commission_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Included in Commission Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infomercial_Type__c</fullName>
        <label>Infomercial Type</label>
        <picklist>
            <picklistValues>
                <fullName>Late Night</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daytime</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Informed_Net_Meter_Installed_Date__c</fullName>
        <description>Used for Apex trigger.</description>
        <label>Informed Net Meter Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Contracts_Signed_Date__c</fullName>
        <label>Initial Contracts Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Payment_in_Dollars__c</fullName>
        <label>Initial Payment in Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inspection_Notes__c</fullName>
        <label>Inspection Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inspection_Received_Date__c</fullName>
        <label>Inspection Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Request_Date__c</fullName>
        <label>Inspection Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Complete__c</fullName>
        <formula>Net_Meter_Installed__c ||  NOT( ISNULL( Install_Completed__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Completed__c</fullName>
        <label>Install Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Crew__c</fullName>
        <inlineHelpText>Select assigned install crew.</inlineHelpText>
        <label>Install Crew</label>
        <picklist>
            <picklistValues>
                <fullName>Matiled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RJ2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Passed_Final_Inspection__c</fullName>
        <inlineHelpText>Enter Date of Final Inspection</inlineHelpText>
        <label>Install Passed Final Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Released__c</fullName>
        <label>Install Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Scheduled__c</fullName>
        <inlineHelpText>Enter Date Install was Scheduled</inlineHelpText>
        <label>Install Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Status__c</fullName>
        <inlineHelpText>This field may trigger an email alert when given a value.</inlineHelpText>
        <label>Install Status</label>
        <picklist>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Permits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installation_Comments__c</fullName>
        <label>Installation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Installation_ID__c</fullName>
        <description>From PV Project.NumericID</description>
        <label>Installation ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intacct_Customer_ID__c</fullName>
        <formula>AccountId__r.IntacctID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intacct Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intacct_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intacct Entity</label>
        <referenceTo>Intacct_Entity__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intake_Questionnaire__c</fullName>
        <label>Intake Questionnaire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection_Date__c</fullName>
        <description>Uses PV NetMeter Installed Date or First Production Date from PD if PV NetMeter Installed Date is null</description>
        <label>Interconnection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interested_In_Solar_Hot_Water__c</fullName>
        <description>Evaluates to true if the &quot;Solar Hot Water&quot; option of the Solar Product picklist is selected.Used in Docusign form tags.</description>
        <formula>INCLUDES( Solar_Product__c , &apos;Solar Hot Water&apos;)</formula>
        <label>Interested In Solar Hot Water</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Energy_Efficiency__c</fullName>
        <formula>INCLUDES( Solar_Product__c , &apos;Energy Efficiency&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interested in Energy Efficiency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inverter_Make_Model__c</fullName>
        <description>From System Manufacturer &amp; Model</description>
        <label>Inverter Make &amp; Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Serial_Number_from_System__c</fullName>
        <label>Inverter Serial Number from System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter__c</fullName>
        <label>Inverter</label>
        <picklist>
            <picklistValues>
                <fullName>Distrubed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Acceptance__c</fullName>
        <inlineHelpText>Select Reject or Approve for the invoice submitted</inlineHelpText>
        <label>Invoice Acceptance</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPrivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Feasible__c</fullName>
        <formula>AND(NOT( ISNULL( Roof_Assessment_Complete_Date__c ) ),  NOT(ISPICKVAL( StageName__c , &quot;Lost - Not Feasible&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Feasible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Portion_of_Roof_Facing_South_or_West__c</fullName>
        <formula>Property__r.Is_Portion_of_Roof_Facing_South_or_West__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Portion of Roof Facing South or West</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Applicant_First_Name__c</fullName>
        <label>Joint Applicant First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Applicant_Last_Name__c</fullName>
        <label>Joint Applicant Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Applicant_Middle_Name__c</fullName>
        <label>Joint Applicant Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_Parish__c</fullName>
        <label>Jurisdiction_Parish</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KDH_Number__c</fullName>
        <description>Use only if KDH is the installer</description>
        <inlineHelpText>KDH unique number</inlineHelpText>
        <label>KDH Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KWF_Amount__c</fullName>
        <label>KWF Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KWF_Submitted_Age__c</fullName>
        <formula>TODAY() -   Submitted_to_KWF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KWF Submitted Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMI_Acceptance_Received_Date__c</fullName>
        <label>LMI Acceptance Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMI_Acceptance_Result__c</fullName>
        <label>LMI Acceptance Result</label>
        <picklist>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LMI_Acceptance_Submitted_Date__c</fullName>
        <label>LMI Acceptance Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMI_Application_Submitted_Date__c</fullName>
        <label>LMI Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMI_Application_Submitted__c</fullName>
        <label>LMI Application Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMI_Documentation_Collected__c</fullName>
        <label>LMI Documentation Collected</label>
        <picklist>
            <picklistValues>
                <fullName>Connecticut HUSKY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free and Reduced Price School Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Energy Solutions - Income Eligible (HES-IE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last two pay stubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last two years Form 1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Income Home Energy Assistance Program (LIHEAP)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LMI_Eligible__c</fullName>
        <label>LMI Eligible</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LMI_Status_Result_Received__c</fullName>
        <label>LMI Status Result Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMI__c</fullName>
        <description>ACS_Median_Income__c &lt;  (State_Median_Income__c  * 1.2)</description>
        <formula>ACS_Median_Income__c &lt;  (State_Median_Income__c  * 1.2)</formula>
        <inlineHelpText>ACS_Median_Income__c &lt;  (State_Median_Income__c  * 1.2)</inlineHelpText>
        <label>LMI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMS_Account_Number__c</fullName>
        <label>LMS Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Account__c</fullName>
        <description>If there is a legacy LMS Account (i.e. pre-2014 cutover from First Associates to Lease Dimensions), it will show that.  Otherwise it will show the new format, which is 200,000 + the Opp Numeric ID</description>
        <formula>IF( ISBLANK(LMS_Account_Number__c), TEXT(LMS_Number_from_Opp__c), LMS_Account_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMS Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Customer_Number__c</fullName>
        <description>This is the same as the LMS Account, it&apos;s needed b/c in the Lease Dimensions system, the Customer Number and Contract Number are the same.</description>
        <formula>LMS_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMS Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Number_from_Opp__c</fullName>
        <formula>value(Opportunity__r.Numeric_ID__c)  + 200000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMS Number from Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Landing_Page__c</fullName>
        <label>Landing Page</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Client_Signed_Date__c</fullName>
        <label>Last Client Signed Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>